# sanskrit-english-identification

./: .gitignore  Cargo.toml  README.md  fasttext  input_texts.txt
english/: english_subfile_00  english_subfile_01  english_subfile_02  english_subfile_03  english_subfile_04  english_subfile_05  english_subfile_06  english_subfile_07  english_subfile_08  english_subfile_09  english_subfile_10  english_subfile_11  english_subfile_12  english_subfile_13  english_subfile_14  english_subfile_15  english_subfile_16  english_subfile_17  english_subfile_18  english_subfile_19  english_subfile_20  english_subfile_21  english_subfile_22  english_subfile_23  english_subfile_24  english_subfile_25  english_subfile_26  english_subfile_27  english_subfile_28  english_subfile_29  english_subfile_30  english_subfile_31  english_subfile_32  english_subfile_33  english_subfile_34  english_subfile_35  english_subfile_36  english_subfile_37  english_subfile_38  english_subfile_39  (+60 more)
english_backup/: english_subfile_00  english_subfile_02  english_subfile_03  english_subfile_04  english_subfile_06  english_subfile_07  english_subfile_08  english_subfile_10  english_subfile_12  english_subfile_13  english_subfile_14  english_subfile_15  english_subfile_18  english_subfile_19  english_subfile_20  english_subfile_22  english_subfile_23  english_subfile_24  english_subfile_25  english_subfile_26  english_subfile_27  english_subfile_30  english_subfile_31  english_subfile_32  english_subfile_33  english_subfile_35  english_subfile_36  english_subfile_39  english_subfile_42  english_subfile_43  english_subfile_44  english_subfile_45  english_subfile_48  english_subfile_52  english_subfile_53  english_subfile_54  english_subfile_56  english_subfile_57  english_subfile_58  (+30 more)
src/: lib.rs  (+2 more)
(+2676 files in other folders)
