[package]
name = "sanskrit-english-identification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.16.0"
aws-sdk-s3 = "1.17.0"
clap = {version = "4.5.1", features = ["derive"]}
fasttext = "0.7.8"
tokio = { version = "1.36.0", features = ["full"] }
