[package]
name = "sanskrit-english-identification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.16.0"
aws-sdk-s3 = "1.17.0"
aws-smithy-types = "1.1.7"
chrono = "0.4.35"
clap = {version = "4.5.1", features = ["derive"]}
fast_text = "0.1.2"
fasttext = "0.7.8"
indicatif = "0.17.8"
mktemp = "0.5.1"
regex = "1.10.3"
spinoff = "0.8.0"
tokio = { version = "1.36.0", features = ["full"] }
zip = "0.6.6"
